@@ -1,6 +1,7 @@
 cm4all-workshop (7.2) unstable; urgency=low
 
   * workshop: disable plan UID check for "translate" plans
+  * workshop: implement TERMINATE_CHILDREN for "translate" and "spawn"
   * cron: support multiple CHILD_TAGs for TERMINATE_CHILDREN
 
  --   
